--- a/src/components/_radio.scss
+++ b/src/components/_radio.scss
@@ -72,6 +72,7 @@ $eve-radio-size: 1.125rem;
 
 .eve-radio-control {
     display: flex;
+    align-items: center;
     font-size: $eve-font-normal;
     word-break: break-all;
 
