--- a/src/components/_switch.scss
+++ b/src/components/_switch.scss
@@ -67,6 +67,7 @@ $eve-switch-height: 1.125rem;
 
 .eve-switch-control {
     display: flex;
+    align-items: center;
     font-size: $eve-font-normal;
     word-break: break-all;
 
